--- a/reservas.njk
+++ b/reservas.njk
@@ -5,7 +5,7 @@ description: "Solicita disponibilidad para Casa Bardena Negra o reserva desde Ru
 permalink: "/reservas/"
 ---
 
-<section style="margin-top:2rem" class="grid cols-2">
+<section class="container prose">
   <div class="card">
     <h1>Solicitar disponibilidad</h1>
     <form name="reserva" method="POST" action="/gracias/" data-netlify="true" netlify-honeypot="bot-field" accept-charset="UTF-8">
