--- a/la-casa.njk
+++ b/la-casa.njk
@@ -130,33 +130,33 @@ permalink: "/la-casa/"
 <section class="container" style="margin-top:2rem">
   <div class="gallery-grid">
     <figure class="figure">
-      <a class="lb" data-group="casa" data-caption="Salón con sofá cama" href="/images/salon-1.webp">
-        <img loading="lazy" src="/images/salon-1.webp" alt="Salón con sofá cama" sizes="(max-width:960px) 100vw, 33vw">
+      <a class="lb" data-group="casa" data-caption="Salón con sofá cama" href="/images/salon-sofa-cama.jpg">
+        <img loading="lazy" src="/images/salon-sofa-cama.jpg" alt="Salón con sofá cama" sizes="(max-width:960px) 100vw, 33vw">
       </a>
     </figure>
     <figure class="figure">
-      <a class="lb" data-group="casa" data-caption="Cocina totalmente equipada" href="/images/cocina-1.webp">
-        <img loading="lazy" src="/images/cocina-1.webp" alt="Cocina totalmente equipada" sizes="(max-width:960px) 100vw, 33vw">
+      <a class="lb" data-group="casa" data-caption="Cocina totalmente equipada" href="/images/cocina-equipada.jpg">
+        <img loading="lazy" src="/images/cocina-equipada.jpg" alt="Cocina totalmente equipada" sizes="(max-width:960px) 100vw, 33vw">
       </a>
     </figure>
     <figure class="figure">
-      <a class="lb" data-group="casa" data-caption="Dormitorio de matrimonio" href="/images/dorm-1.webp">
-        <img loading="lazy" src="/images/dorm-1.webp" alt="Dormitorio de matrimonio" sizes="(max-width:960px) 100vw, 33vw">
+      <a class="lb" data-group="casa" data-caption="Dormitorio de matrimonio" href="/images/habitacion-abajo.jpg">
+        <img loading="lazy" src="/images/habitacion-abajo.jpg" alt="Dormitorio de matrimonio" sizes="(max-width:960px) 100vw, 33vw">
       </a>
     </figure>
     <figure class="figure">
-      <a class="lb" data-group="casa" data-caption="Dormitorio doble" href="/images/dorm-2.webp">
-        <img loading="lazy" src="/images/dorm-2.webp" alt="Dormitorio doble" sizes="(max-width:960px) 100vw, 33vw">
+      <a class="lb" data-group="casa" data-caption="Dormitorio doble" href="/images/habitacion-grande-arriba.jpg">
+        <img loading="lazy" src="/images/habitacion-grande-arriba.jpg" alt="Dormitorio doble" sizes="(max-width:960px) 100vw, 33vw">
       </a>
     </figure>
     <figure class="figure">
-      <a class="lb" data-group="casa" data-caption="Baño con ducha" href="/images/banos-1.webp">
-        <img loading="lazy" src="/images/banos-1.webp" alt="Baño con ducha" sizes="(max-width:960px) 100vw, 33vw">
+      <a class="lb" data-group="casa" data-caption="Baño con ducha" href="/images/bathroom-abajo.jpg">
+        <img loading="lazy" src="/images/bathroom-abajo.jpg" alt="Baño con ducha" sizes="(max-width:960px) 100vw, 33vw">
       </a>
     </figure>
     <figure class="figure">
-      <a class="lb" data-group="casa" data-caption="Terraza y barbacoa" href="/images/jardin-1.webp">
-        <img loading="lazy" src="/images/jardin-1.webp" alt="Terraza y barbacoa" sizes="(max-width:960px) 100vw, 33vw">
+      <a class="lb" data-group="casa" data-caption="Terraza y barbacoa" href="/images/terraza-casa.jpg">
+        <img loading="lazy" src="/images/terraza-casa.jpg" alt="Terraza y barbacoa" sizes="(max-width:960px) 100vw, 33vw">
       </a>
     </figure>
   </div>
