--- a/la-casa.njk
+++ b/la-casa.njk
@@ -108,7 +108,7 @@ permalink: "/la-casa/"
       <li class="feature">
         <span class="icon-24">
           <svg viewBox="0 0 24 24"><path d="M5 21h14M12 21v-6M7 15h10"/><path d="M8 11a4 4 0 1 0 8 0"/></svg>
-        </span>Jardín y barbacoa
+        </span>Barbacoa
       </li>
       <!-- Cuna -->
       <li class="feature">
